# ShopAppQtCreator

./: README.md
AppQtCreator/Signin/: Administrator.cpp  Administrator.h  CMakeLists.txt  Global.cpp  Global.h  Image.qrc  ShoppingData.db  Signin_vi_VN.ts  User.cpp  User.h  addproduct.cpp  addproduct.h  addproduct.ui  detailproduct.cpp  detailproduct.h  detailproduct.ui  help_1.ui  help_gift.cpp  help_gift.h  help_gift.ui  help_method.cpp  help_method.h  help_method.ui  help_shippingadd.cpp  help_shippingadd.h  help_shippingadd.ui  main.cpp  mydb.cpp  mydb.h  register.cpp  register.h  register.ui  shop_display.cpp  shop_display.h  shop_display.ui  shop_display_admin.cpp  shop_display_admin.h  shop_display_admin.ui  shoppingcart.cpp  shoppingcart.h  (+7 more)
AppQtCreator/Signin/Image/: Gucci_signin.jfif
